# nyx-taxi-analysis

./: .env  .gitignore  README.md  db.drawio  main.py  pyproject.toml  requirements.txt  test.drawio
airflow_env/: pyvenv.cfg
dags/: test.py
data/bronze/: taxi_raw.parquet
data/gold/: daily_trips.parquet
data/silver/: taxi_cleaned.parquet
dataSpark/bronze/taxi_raw/: .part-00000-2543911e-f2cc-4e90-9e73-09264b7bd186-c000.snappy.parquet.crc  .part-00000-330ab6a1-2c7d-4ed2-aec9-41d1758461aa-c000.snappy.parquet.crc  .part-00001-6d554bff-70d9-4d47-922b-ce6422bc349c-c000.snappy.parquet.crc  .part-00001-9c4471dd-25d9-4fd2-b7e0-94496fb36746-c000.snappy.parquet.crc  part-00000-2543911e-f2cc-4e90-9e73-09264b7bd186-c000.snappy.parquet  part-00000-330ab6a1-2c7d-4ed2-aec9-41d1758461aa-c000.snappy.parquet  part-00001-6d554bff-70d9-4d47-922b-ce6422bc349c-c000.snappy.parquet  part-00001-9c4471dd-25d9-4fd2-b7e0-94496fb36746-c000.snappy.parquet
dataSpark/gold/hourly_traffic_stats/: .part-00000-9838debd-da04-48e7-aac3-f8bd8e6824ac-c000.snappy.parquet.crc  part-00000-9838debd-da04-48e7-aac3-f8bd8e6824ac-c000.snappy.parquet
docs/: medallian.md  nyc-taxi-pipeline-architecture.drawio  project_doc.md  src_spark_doc.md
notebooks/: eda.ipynb  spark_ed.ipynb
src/: pipeline.py
src/pipeline/: bronze.py  gold.py  silver.py
src/sparkPipeline/: bronze.py
src/spark_pipeline/: bronze.py  silver.py
src/utils/: load.py  spark_manager.py
src_spark/: spark_pipe.py
src_spark/spark_pipeline/: bronze.py  gold.py  silver.py
src_spark/utils/: load.py  spark_manager.py
(+18 files in other folders)
