[project]
name = "nyc-taxi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.5.2",
    "fastparquet>=2026.3.0",
    "ipykernel>=7.2.0",
    "kagglehub>=1.0.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.2",
    "psycopg2>=2.9.12",
    "pyarrow>=24.0.0",
    "pyspark>=4.1.1",
    "sqlalchemy>=2.0.49",
]
